<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/editPopup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:textStyle="italic"
                android:textSize="18sp"
                android:id="@+id/edittext"
                android:layout_centerHorizontal="true"
                android:text="@string/edittext"/>

            <EditText
                android:id="@+id/editNomeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext"
                android:hint="@string/hintNome" />

            <EditText
                android:id="@+id/editQuantidadeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editNomeInput"
                android:hint="@string/hintquantidade"
                android:inputType="number" />

            <Button
                android:id="@+id/editSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editQuantidadeInput"
                android:text="@string/addButton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                />






        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>